S2: Add mock endpoints.
