# pkg/api/AntiBruteforce.pb.go
@@ -22,6 +22,58 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
+type IdentifierType int32
+
+const (
+	IdentifierType_IDENTIFIER_TYPE_UNSPECIFIED IdentifierType = 0
+	IdentifierType_IDENTIFIER_TYPE_LOGIN       IdentifierType = 1
+	IdentifierType_IDENTIFIER_TYPE_PASSWORD    IdentifierType = 2
+	IdentifierType_IDENTIFIER_TYPE_IP          IdentifierType = 3
+)
+
+// Enum value maps for IdentifierType.
+var (
+	IdentifierType_name = map[int32]string{
+		0: "IDENTIFIER_TYPE_UNSPECIFIED",
+		1: "IDENTIFIER_TYPE_LOGIN",
+		2: "IDENTIFIER_TYPE_PASSWORD",
+		3: "IDENTIFIER_TYPE_IP",
+	}
+	IdentifierType_value = map[string]int32{
+		"IDENTIFIER_TYPE_UNSPECIFIED": 0,
+		"IDENTIFIER_TYPE_LOGIN":       1,
+		"IDENTIFIER_TYPE_PASSWORD":    2,
+		"IDENTIFIER_TYPE_IP":          3,
+	}
+)
+
+func (x IdentifierType) Enum() *IdentifierType {
+	p := new(IdentifierType)
+	*p = x
+	return p
+}
+
+func (x IdentifierType) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (IdentifierType) Descriptor() protoreflect.EnumDescriptor {
+	return file_AntiBruteforce_proto_enumTypes[0].Descriptor()
+}
+
+func (IdentifierType) Type() protoreflect.EnumType {
+	return &file_AntiBruteforce_proto_enumTypes[0]
+}
+
+func (x IdentifierType) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use IdentifierType.Descriptor instead.
+func (IdentifierType) EnumDescriptor() ([]byte, []int) {
+	return file_AntiBruteforce_proto_rawDescGZIP(), []int{0}
+}
+
 type HelloRequest struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
 	unknownFields protoimpl.UnknownFields
@@ -182,6 +234,190 @@ func (x *HealthcheckResponse) GetStatus() string {
 	return ""
 }
 
+type CheckAuthRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Type          IdentifierType         `protobuf:"varint,1,opt,name=type,proto3,enum=event.IdentifierType" json:"type,omitempty"`
+	Value         string                 `protobuf:"bytes,2,opt,name=value,proto3" json:"value,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *CheckAuthRequest) Reset() {
+	*x = CheckAuthRequest{}
+	mi := &file_AntiBruteforce_proto_msgTypes[4]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *CheckAuthRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CheckAuthRequest) ProtoMessage() {}
+
+func (x *CheckAuthRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_AntiBruteforce_proto_msgTypes[4]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CheckAuthRequest.ProtoReflect.Descriptor instead.
+func (*CheckAuthRequest) Descriptor() ([]byte, []int) {
+	return file_AntiBruteforce_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *CheckAuthRequest) GetType() IdentifierType {
+	if x != nil {
+		return x.Type
+	}
+	return IdentifierType_IDENTIFIER_TYPE_UNSPECIFIED
+}
+
+func (x *CheckAuthRequest) GetValue() string {
+	if x != nil {
+		return x.Value
+	}
+	return ""
+}
+
+type CheckAuthResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Ok            bool                   `protobuf:"varint,1,opt,name=ok,proto3" json:"ok,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *CheckAuthResponse) Reset() {
+	*x = CheckAuthResponse{}
+	mi := &file_AntiBruteforce_proto_msgTypes[5]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *CheckAuthResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CheckAuthResponse) ProtoMessage() {}
+
+func (x *CheckAuthResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_AntiBruteforce_proto_msgTypes[5]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CheckAuthResponse.ProtoReflect.Descriptor instead.
+func (*CheckAuthResponse) Descriptor() ([]byte, []int) {
+	return file_AntiBruteforce_proto_rawDescGZIP(), []int{5}
+}
+
+func (x *CheckAuthResponse) GetOk() bool {
+	if x != nil {
+		return x.Ok
+	}
+	return false
+}
+
+type ClearRateRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Type          IdentifierType         `protobuf:"varint,1,opt,name=type,proto3,enum=event.IdentifierType" json:"type,omitempty"`
+	Value         string                 `protobuf:"bytes,2,opt,name=value,proto3" json:"value,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *ClearRateRequest) Reset() {
+	*x = ClearRateRequest{}
+	mi := &file_AntiBruteforce_proto_msgTypes[6]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *ClearRateRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ClearRateRequest) ProtoMessage() {}
+
+func (x *ClearRateRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_AntiBruteforce_proto_msgTypes[6]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ClearRateRequest.ProtoReflect.Descriptor instead.
+func (*ClearRateRequest) Descriptor() ([]byte, []int) {
+	return file_AntiBruteforce_proto_rawDescGZIP(), []int{6}
+}
+
+func (x *ClearRateRequest) GetType() IdentifierType {
+	if x != nil {
+		return x.Type
+	}
+	return IdentifierType_IDENTIFIER_TYPE_UNSPECIFIED
+}
+
+func (x *ClearRateRequest) GetValue() string {
+	if x != nil {
+		return x.Value
+	}
+	return ""
+}
+
+type ClearRateResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *ClearRateResponse) Reset() {
+	*x = ClearRateResponse{}
+	mi := &file_AntiBruteforce_proto_msgTypes[7]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *ClearRateResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ClearRateResponse) ProtoMessage() {}
+
+func (x *ClearRateResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_AntiBruteforce_proto_msgTypes[7]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ClearRateResponse.ProtoReflect.Descriptor instead.
+func (*ClearRateResponse) Descriptor() ([]byte, []int) {
+	return file_AntiBruteforce_proto_rawDescGZIP(), []int{7}
+}
+
 var File_AntiBruteforce_proto protoreflect.FileDescriptor
 
 const file_AntiBruteforce_proto_rawDesc = "" +
@@ -192,10 +428,26 @@ const file_AntiBruteforce_proto_rawDesc = "" +
 	"\amessage\x18\x01 \x01(\tR\amessage\"\x14\n" +
 	"\x12HealthcheckRequest\"-\n" +
 	"\x13HealthcheckResponse\x12\x16\n" +
-	"\x06status\x18\x01 \x01(\tR\x06status2\xb6\x01\n" +
+	"\x06status\x18\x01 \x01(\tR\x06status\"S\n" +
+	"\x10CheckAuthRequest\x12)\n" +
+	"\x04type\x18\x01 \x01(\x0e2\x15.event.IdentifierTypeR\x04type\x12\x14\n" +
+	"\x05value\x18\x02 \x01(\tR\x05value\"#\n" +
+	"\x11CheckAuthResponse\x12\x0e\n" +
+	"\x02ok\x18\x01 \x01(\bR\x02ok\"S\n" +
+	"\x10ClearRateRequest\x12)\n" +
+	"\x04type\x18\x01 \x01(\x0e2\x15.event.IdentifierTypeR\x04type\x12\x14\n" +
+	"\x05value\x18\x02 \x01(\tR\x05value\"\x13\n" +
+	"\x11ClearRateResponse*\x82\x01\n" +
+	"\x0eIdentifierType\x12\x1f\n" +
+	"\x1bIDENTIFIER_TYPE_UNSPECIFIED\x10\x00\x12\x19\n" +
+	"\x15IDENTIFIER_TYPE_LOGIN\x10\x01\x12\x1c\n" +
+	"\x18IDENTIFIER_TYPE_PASSWORD\x10\x02\x12\x16\n" +
+	"\x12IDENTIFIER_TYPE_IP\x10\x032\xe6\x02\n" +
 	"\x0eAntiBruteforce\x12H\n" +
 	"\x05Hello\x12\x13.event.HelloRequest\x1a\x14.event.HelloResponse\"\x14\x82\xd3\xe4\x93\x02\x0e\x12\f/hello-world\x12Z\n" +
-	"\vHealthcheck\x12\x19.event.HealthcheckRequest\x1a\x1a.event.HealthcheckResponse\"\x14\x82\xd3\xe4\x93\x02\x0e\x12\f/healthcheckB0Z.github.com/Romasmi/anti-bruteforce/pkg/api;apib\x06proto3"
+	"\vHealthcheck\x12\x19.event.HealthcheckRequest\x1a\x1a.event.HealthcheckResponse\"\x14\x82\xd3\xe4\x93\x02\x0e\x12\f/healthcheck\x12V\n" +
+	"\tCheckAuth\x12\x17.event.CheckAuthRequest\x1a\x18.event.CheckAuthResponse\"\x16\x82\xd3\xe4\x93\x02\x10:\x01*\"\v/auth/check\x12V\n" +
+	"\tClearRate\x12\x17.event.ClearRateRequest\x1a\x18.event.ClearRateResponse\"\x16\x82\xd3\xe4\x93\x02\x10:\x01*\"\v/clear-rateB0Z.github.com/Romasmi/anti-bruteforce/pkg/api;apib\x06proto3"
 
 var (
 	file_AntiBruteforce_proto_rawDescOnce sync.Once
@@ -209,23 +461,35 @@ func file_AntiBruteforce_proto_rawDescGZIP() []byte {
 	return file_AntiBruteforce_proto_rawDescData
 }
 
-var file_AntiBruteforce_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
+var file_AntiBruteforce_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_AntiBruteforce_proto_msgTypes = make([]protoimpl.MessageInfo, 8)
 var file_AntiBruteforce_proto_goTypes = []any{
-	(*HelloRequest)(nil),        // 0: event.HelloRequest
-	(*HelloResponse)(nil),       // 1: event.HelloResponse
-	(*HealthcheckRequest)(nil),  // 2: event.HealthcheckRequest
-	(*HealthcheckResponse)(nil), // 3: event.HealthcheckResponse
+	(IdentifierType)(0),         // 0: event.IdentifierType
+	(*HelloRequest)(nil),        // 1: event.HelloRequest
+	(*HelloResponse)(nil),       // 2: event.HelloResponse
+	(*HealthcheckRequest)(nil),  // 3: event.HealthcheckRequest
+	(*HealthcheckResponse)(nil), // 4: event.HealthcheckResponse
+	(*CheckAuthRequest)(nil),    // 5: event.CheckAuthRequest
+	(*CheckAuthResponse)(nil),   // 6: event.CheckAuthResponse
+	(*ClearRateRequest)(nil),    // 7: event.ClearRateRequest
+	(*ClearRateResponse)(nil),   // 8: event.ClearRateResponse
 }
 var file_AntiBruteforce_proto_depIdxs = []int32{
-	0, // 0: event.AntiBruteforce.Hello:input_type -> event.HelloRequest
-	2, // 1: event.AntiBruteforce.Healthcheck:input_type -> event.HealthcheckRequest
-	1, // 2: event.AntiBruteforce.Hello:output_type -> event.HelloResponse
-	3, // 3: event.AntiBruteforce.Healthcheck:output_type -> event.HealthcheckResponse
-	2, // [2:4] is the sub-list for method output_type
-	0, // [0:2] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
+	0, // 0: event.CheckAuthRequest.type:type_name -> event.IdentifierType
+	0, // 1: event.ClearRateRequest.type:type_name -> event.IdentifierType
+	1, // 2: event.AntiBruteforce.Hello:input_type -> event.HelloRequest
+	3, // 3: event.AntiBruteforce.Healthcheck:input_type -> event.HealthcheckRequest
+	5, // 4: event.AntiBruteforce.CheckAuth:input_type -> event.CheckAuthRequest
+	7, // 5: event.AntiBruteforce.ClearRate:input_type -> event.ClearRateRequest
+	2, // 6: event.AntiBruteforce.Hello:output_type -> event.HelloResponse
+	4, // 7: event.AntiBruteforce.Healthcheck:output_type -> event.HealthcheckResponse
+	6, // 8: event.AntiBruteforce.CheckAuth:output_type -> event.CheckAuthResponse
+	8, // 9: event.AntiBruteforce.ClearRate:output_type -> event.ClearRateResponse
+	6, // [6:10] is the sub-list for method output_type
+	2, // [2:6] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
 }
 
 func init() { file_AntiBruteforce_proto_init() }
@@ -238,13 +502,14 @@ func file_AntiBruteforce_proto_init() {
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_AntiBruteforce_proto_rawDesc), len(file_AntiBruteforce_proto_rawDesc)),
-			NumEnums:      0,
-			NumMessages:   4,
+			NumEnums:      1,
+			NumMessages:   8,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
 		GoTypes:           file_AntiBruteforce_proto_goTypes,
 		DependencyIndexes: file_AntiBruteforce_proto_depIdxs,
+		EnumInfos:         file_AntiBruteforce_proto_enumTypes,
 		MessageInfos:      file_AntiBruteforce_proto_msgTypes,
 	}.Build()
 	File_AntiBruteforce_proto = out.File
